Mirror. Added change log API to api namespace
