# src/Controller/Api/ApiForwardController.php
@@ -4,6 +4,8 @@ declare(strict_types=1);
 
 namespace Packeton\Controller\Api;
 
+use Packeton\Attribute\Vars;
+use Packeton\Entity\Package;
 use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
 use Symfony\Component\HttpFoundation\Request;
 use Symfony\Component\Routing\Annotation\Route;
@@ -11,6 +13,8 @@ use Symfony\Component\Routing\Annotation\Route;
 #[Route('/api', name: 'api_', defaults: ['_format' => 'json'])]
 class ApiForwardController extends AbstractController
 {
+    use ApiControllerTrait;
+
     #[Route('/packages', name: 'packages_lists', methods: ['GET'])]
     public function lists(Request $request)
     {
@@ -21,6 +25,12 @@ class ApiForwardController extends AbstractController
     public function item(string $name)
     {
         return $this->forward('Packeton\Controller\PackageController::viewPackageAction', ['name' => $name, '_format' => 'json']);
+    }
+
+    #[Route('/packages/{name}/changelog', name: 'packages_changelog', requirements: ['name' => '%package_name_regex%'], methods: ['GET'])]
+    public function changelog(#[Vars] Package $package, Request $request)
+    {
+        return $this->forward('Packeton\Controller\PackageController::changelogAction', ['package' => $package, '_format' => 'json'], $request->query->all());
     }
 
     #[Route('/jobs/{id}', name: 'job_result', methods: ['GET'])]
